2019: initial commit for day2

--- a/2019/package.json
+++ b/2019/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "day1": "babel-node --extensions .ts ./day1.ts"
+    "run-day": "babel-node --extensions .ts",
+    "day1": "yarn run-day ./day1.ts",
+    "day2": "yarn run-day ./day2.ts"
   },
   "dependencies": {
     "chalk": "^3.0.0"
