--- a/2019/package.json
+++ b/2019/package.json
@@ -7,7 +7,8 @@
     "run-day": "babel-node --extensions .ts",
     "day1": "yarn run-day ./day1.ts",
     "day2": "yarn run-day ./day2.ts",
-    "day3": "yarn run-day ./day3.ts"
+    "day3": "yarn run-day ./day3.ts",
+    "day4": "yarn run-day ./day4.ts"
   },
   "dependencies": {
     "chalk": "^3.0.0"
