2019: day6: initial commit

--- a/2019/package.json
+++ b/2019/package.json
@@ -9,7 +9,8 @@
     "day2": "yarn run-day ./day2.ts",
     "day3": "yarn run-day ./day3.ts",
     "day4": "yarn run-day ./day4.ts",
-    "day5": "yarn run-day ./day5.ts"
+    "day5": "yarn run-day ./day5.ts",
+    "day6": "yarn run-day ./day6.ts"
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
