--- a/2019/package.json
+++ b/2019/package.json
@@ -11,7 +11,8 @@
     "day4": "yarn run-day ./day4.ts",
     "day5": "yarn run-day ./day5.ts",
     "day6": "yarn run-day ./day6.ts",
-    "day7": "yarn run-day ./day7.ts"
+    "day7": "yarn run-day ./day7.ts",
+    "day8": "yarn run-day ./day8.ts"
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
