2019: day9: initial commit

--- a/2019/package.json
+++ b/2019/package.json
@@ -12,7 +12,8 @@
     "day5": "yarn run-day ./day5.ts",
     "day6": "yarn run-day ./day6.ts",
     "day7": "yarn run-day ./day7.ts",
-    "day8": "yarn run-day ./day8.ts"
+    "day8": "yarn run-day ./day8.ts",
+    "day9": "yarn run-day ./day9.ts"
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
