--- a/2019/tsconfig.json
+++ b/2019/tsconfig.json
@@ -2,9 +2,6 @@
   "compilerOptions": {
     "strict": true,
     "target": "ES2017",
-    "lib": [
-      "ES2017",
-      "ES2019"
-    ]
+    "lib": ["ES2017", "ES2019"]
   }
 }
