--- a/2019/package.json
+++ b/2019/package.json
@@ -14,7 +14,8 @@
     "day7": "yarn run-day ./day7.ts",
     "day8": "yarn run-day ./day8.ts",
     "day9": "yarn run-day ./day9.ts",
-    "day10": "yarn run-day ./day10.ts"
+    "day10": "yarn run-day ./day10.ts",
+    "day11": "yarn run-day ./day11.ts"
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
