2019: add support for BigInt literal syntax

--- a/2019/tsconfig.json
+++ b/2019/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "strict": true,
-    "target": "ES2017",
+    "target": "ESNext",
     "lib": ["ES2017", "ES2019", "ESNext.BigInt"]
   }
 }
