--- a/2019/package.json
+++ b/2019/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@babel/core": "^7.7.4",
     "@babel/node": "^7.7.4",
+    "@babel/plugin-syntax-bigint": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-typescript": "^7.7.4",
     "@types/node": "^12.12.14"
