--- a/2019/package.json
+++ b/2019/package.json
@@ -16,7 +16,8 @@
     "day9": "yarn run-day ./day9.ts",
     "day10": "yarn run-day ./day10.ts",
     "day11": "yarn run-day ./day11.ts",
-    "day12": "yarn run-day ./day12.ts"
+    "day12": "yarn run-day ./day12.ts",
+    "day13": "yarn run-day ./day13.ts"
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
