--- a/2019/package.json
+++ b/2019/package.json
@@ -17,7 +17,8 @@
     "day10": "yarn run-day ./day10.ts",
     "day11": "yarn run-day ./day11.ts",
     "day12": "yarn run-day ./day12.ts",
-    "day13": "yarn run-day ./day13.ts"
+    "day13": "yarn run-day ./day13.ts",
+    "day14": "yarn run-day ./day14.ts"
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
